Mon May 23 09:39:05 2005                        Michael Jennings (mej)

Slight syntax changes to work with older versions of perl and rpm.
----------------------------------------------------------------------
Wed May 25 12:20:32 2005                        Michael Jennings (mej)

Unified and improved the spec file search.
----------------------------------------------------------------------
Fri Jun 10 08:58:35 2005                        Michael Jennings (mej)

Minor typo fix.
----------------------------------------------------------------------
Mon Jul 11 19:52:00 2005                        Michael Jennings (mej)

Rename SCM object propset/propget routines to (permanently) avoid
conflict with SCM systems.

Fixed bug where default TARGET insisted on attempting to build DEB's.

Fall back on internal spec file parser if "rpm --eval" fails.

Added 2 new specgen templates for kernel modules.
----------------------------------------------------------------------
Thu Jul 21 13:40:07 2005                        Michael Jennings (mej)

A few minor CVS-related bugfixes related to missing keyword options
and branch tagging.
----------------------------------------------------------------------
Thu Jul 21 13:50:25 2005                        Michael Jennings (mej)

One last little tweak, and I'm calling this 1.8 final.
----------------------------------------------------------------------
Fri Jul 22 10:16:42 2005                        Michael Jennings (mej)

Now that 1.8 is out the door, here's the beginning of the 1.9 tree
with Subversion support.  This is a work in progress, so use caution.
----------------------------------------------------------------------
Tue Jul 26 18:24:30 2005                        Michael Jennings (mej)

Fixed mzstat, mzinfo, mzblame, mzdiff, and mzadd for Subversion.  Also
fixed some undefined return values in revtool.
----------------------------------------------------------------------